--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DataTableExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DREntity.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRHero.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRMonster.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRMusic.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRScene.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRSound.cs" />
@@ -74,18 +75,23 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\DataStruct\VersionInfo.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\CampType.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\HeroAnimationState.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\MonsterAnimationState.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\QualityLevelType.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\RelationType.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\EntityData.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\FightEntityData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\HeroData.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\MonsterData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\TargetableObjectData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Entity.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\HeroLogic.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\MonsterLogic.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\TargetableObject.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\State\HeroIdleState.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\State\HeroWalkState.cs" />
-     <Compile Include="Assets\GF_JustOneLevel\Scripts\Event\Hero\HeroWalkEventArgs.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\State\MonsterIdleState.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\State\MonsterWalkState.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Game\SurvivalGame.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Localization\LocalizationExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Localization\XmlLocalizationHelper.cs" />
@@ -220,10 +226,10 @@
       <Project>{BF4A1F1A-C05D-04EF-CA03-583C88603CB9}</Project>      <Name>Assembly-CSharp-firstpass</Name>    </ProjectReference>
     <ProjectReference Include="UnityGameFramework.Runtime.csproj">
       <Project>{D47F4F3A-6605-F232-66CE-185F37EDE5D6}</Project>      <Name>UnityGameFramework.Runtime</Name>    </ProjectReference>
-    <ProjectReference Include="UnityGameFramework.Editor.csproj">
-      <Project>{5D1067A1-7056-17CE-83BB-EA22D9081C1C}</Project>      <Name>UnityGameFramework.Editor</Name>    </ProjectReference>
     <ProjectReference Include="GameFramework.csproj">
       <Project>{088C33B6-563A-26CC-FC13-D9C3C6F2A3A6}</Project>      <Name>GameFramework</Name>    </ProjectReference>
+    <ProjectReference Include="UnityGameFramework.Editor.csproj">
+      <Project>{5D1067A1-7056-17CE-83BB-EA22D9081C1C}</Project>      <Name>UnityGameFramework.Editor</Name>    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
