--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DREntity.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRHero.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRMonster.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRMonsterCreater.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRMusic.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRPowerBar.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRScene.cs" />
@@ -83,6 +84,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\EntityData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\FightEntityData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\HeroData.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\MonsterCreaterData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\MonsterData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\PowerBarData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\TargetableObjectData.cs" />
@@ -90,6 +92,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Entity.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Hero.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Monster.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\MonsterCreater.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\PowerBar.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\TargetableObject.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\State\HeroAtkCDState.cs" />
