原自定义ConfigComponent改为BuiltinDataComponent

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,7 +55,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Base\GameEntry.Builtin.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Base\GameEntry.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Base\GameEntry.Custom.cs" />
-     <Compile Include="Assets\GF_JustOneLevel\Scripts\Config\ConfigComponent.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Config\BuiltinDataComponent.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Config\DeviceModelConfig.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DataTableExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DREntity.cs" />
@@ -70,6 +70,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\DataTable\DRUISound.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.EntityData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Layer.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Player.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.ProcedureData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Setting.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\DataStruct\BuildInfo.cs" />
