--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,6 +75,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Player.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.ProcedureData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Setting.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Constant\Constant.Sound.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\DataStruct\BuildInfo.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\DataStruct\DeviceModel.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\DataStruct\ImpactData.cs" />
