--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -133,6 +133,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Event\Hero\ClickAttackButtonEventArgs.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Event\Hero\HeroAttackEventArgs.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Event\Monster\MonsterAttackEventArgs.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Event\RefreshPlayerPropsEventArgs.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Game\SurvivalGame.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Localization\LocalizationExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Localization\XmlLocalizationHelper.cs" />
