增加全局对话框，将失败UI改为全局对话框

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -149,12 +149,13 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Procedure\ProcedureSplash.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Sound\SoundExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Test\LineRenderTest.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\CommonButton.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\DialogParams.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UGuiForm.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UGuiGroupHelper.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIDialog.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIFormId.cs" />
-     <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIGameOver.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIMenu.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIPlayerMessage.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\UI\UIPlayerOperate.cs" />
