将TargetableObject删除，合并到FightEntity

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -98,17 +98,16 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\MonsterCreaterData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\MonsterData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\PowerBarData.cs" />
-     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\TargetableObjectData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\WeaponData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityExtension.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Bullet.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\BulletEffect.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Entity.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\FightEntity.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Hero.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Monster.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\MonsterCreater.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\PowerBar.cs" />
-     <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\TargetableObject.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityLogic\Weapon.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\Environment\MagicWater.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\MoveController\FoolishAIMoveController.cs" />
