将Hero的武器拖尾效果逻辑抽离到WeaponTrialController

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -89,6 +89,7 @@
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\QualityLevelType.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\RelationType.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Definition\Enum\WeaponAttackType.cs" />
+     <Compile Include="Assets\GF_JustOneLevel\Scripts\Effect\WeaponTrialController.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\AccessoryObjectData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\BulletData.cs" />
      <Compile Include="Assets\GF_JustOneLevel\Scripts\Entity\EntityData\BulletEffectData.cs" />
